testdata/formatter/failing/eliminateEmptyParenthesizedThings.go
package main

type a (int)
type a ((int))

func a()   ( bool  ) {  }

func a() (   ) {  }